[package]
name = "masp_mpc"
version = "0.2.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>", "joe <joe@cryptium.ch>"]
edition = "2018"

[lib]
crate-type = ["lib",]

[[bin]]
name = "new"
required-features = ["verification"]

[[bin]]
name = "verify"
required-features = ["verification"]

[[bin]]
name = "beacon"
required-features = ["beacon"]

[[bin]]
name = "verify_transform"

[[bin]]
name = "split_params"

[dependencies]
rand = "0.8.5"
blake2 = "0.10.4"
bellman = { version = "0.11.1", features = ["groth16", "multicore"] }
ff = "0.11.0" 
#bls12_381 = "0.6"
bls12_381 = { git = "https://github.com/joebebel/bls12_381", branch = "joe/fast_subgroup_check"}
exitcode = "1.1.2"
hex = "0.4.2"
itertools = "0.10.3"
num-bigint = "0.4.3"
num-traits = "0.2.12"
byteorder = "1"
sha2 = "0.10.2"
blake2s_simd = "1.0.0"
rand_chacha = "0.3.1"

[dependencies.masp-phase2]
#path = "../masp-phase2"
git = "https://github.com/heliaxdev/masp-phase2"
branch = "main"

[dependencies.masp_proofs]
git = "https://github.com/heliaxdev/masp"
#rev = "b64af55d955a1bd0a77389f0b9c66f180815e73b"
optional = true

[dependencies.hex-literal]
version = "0.3.4"
optional = true

[features]
fast-deserialize = ["masp-phase2/fast-deserialize"]
verification = ["masp_proofs"]
#u128-support = ["pairing/u128-support"]
beacon = ["hex-literal"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1