[package]
name = "masp_mpc"
version = "0.2.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>", "joe <joe@cryptium.ch>"]
edition = "2018"

[lib]
crate-type = ["lib",]

[[bin]]
name = "new"
required-features = ["verification"]

[[bin]]
name = "verify"
required-features = ["verification"]

[[bin]]
name = "beacon"
required-features = ["beacon"]

[[bin]]
name = "verify_transform"

[[bin]]
name = "split_params"

[dependencies]
rand = {version = "0.8.5", default-features = false, features = ["getrandom"] }
blake2 = "0.10.4"
bellman = { version = "0.11.1", features = ["groth16", "multicore"] }
exitcode = "1.1.2"
hex = "0.4.2"
itertools = "0.10.3"
byteorder = "1"
sha2 = "0.10.2"
rand_chacha = "0.3.1"
getrandom = { version = "0.2.6", features = ["js"] }
bls12_381 = "0.6.1"

# Imports MPC functions that will parameterize Powers of Tau to Groth16 (in our context MASP zk-SNARK)
[dependencies.masp-phase2]
branch = "master"
git = "https://github.com/heliaxdev/masp-phase2"

# Imports the MASP circuits used as input to initialize the MPCParameters
[dependencies.masp_proofs]
git = "https://github.com/anoma/masp"
optional = true

[dependencies.hex-literal]
version = "0.3.4"
optional = true

[features]
verification = ["masp_proofs"]
#u128-support = ["pairing/u128-support"]
beacon = ["hex-literal"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true